--- a/TextRPGC++/TextRPGC++.vcxproj.filters
+++ b/TextRPGC++/TextRPGC++.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="race.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="helperFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="class.cpp">
